--- a/.github/workflows/macpackage.yml
+++ b/.github/workflows/macpackage.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         pyinstaller -F srun.py -i 1.ico --noconsole
         
-    - name: Upload to Release
-      uses: JasonEtco/upload-to-release@v0.1.1
+    - name: GitHub Push
+      uses: ad-m/github-push-action@v0.6.0
+
 
