--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "accounts": {
         "account0":{
-            "username":"123",
-            "password":"123"
+            "username":"201917050214",
+            "password":"123456"
         },
         "account1":{
             "username":"",
